--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -4,17 +4,23 @@ on:
   push:
     branches: [ master, dev ]
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+      - review_requested
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
-
     strategy:
 &{strategy}
       matrix:
 &{matrix}
 &{exclude}
 
+    if: ${{ !github.event.pull_request.draft }}
     steps:
 
     - name: Checkout repo
