--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -4,11 +4,16 @@ on:
   push:
     branches: [ master, dev ]
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+      - review_requested
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
-
     strategy:
       fail-fast: false
       max-parallel: 4
@@ -25,6 +30,7 @@ jobs:
 
 
 
+    if: ${{ !github.event.pull_request.draft }}
     steps:
 
     - name: Checkout repo
