--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -4,11 +4,16 @@ on:
   push:
     branches: [ master, dev ]
   pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+      - review_requested
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
-
     strategy:
       fail-fast: false
       max-parallel: 4
@@ -25,6 +30,7 @@ jobs:
 
 
 
+    if: ${{ !github.event.pull_request.draft }}
     steps:
 
     - name: Checkout repo
@@ -50,6 +56,7 @@ jobs:
       if: startsWith(runner.os, 'macOS') == true
 
     - name: Run Nox session for end-to-end flows
+      if: ${{ (contains(fromJson('["1.5.1", "1.10.1", "1.13.0"]'), matrix.pytorch_version ) && github.event_name == 'pull_request' && matrix.platform == 'ubuntu-latest' )  || (github.event_name != 'pull_request') || (github.event_name == 'pull_request' && github.event.action == 'review_requested')}} 
       shell: bash
       run: nox -v -s tests_brevitas_end_to_end-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
 
