--- a/.github/workflows/base_reduced.yml.template
+++ b/.github/workflows/base_reduced.yml.template
@@ -1,27 +1,22 @@
-name: Pytest
+name: &{name}
 
 on:
-  push:
-    branches: [ master, dev ]
   pull_request:
     types:
-      - review_requested
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
     strategy:
-      fail-fast: false
-
-
+&{strategy}
       matrix:
-        python_version: ['3.7', '3.8']
-        pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
-        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_disabled']
-
-
-
+&{matrix}
+&{exclude}
 
     if: ${{ !github.event.pull_request.draft }}
     steps:
@@ -48,6 +43,4 @@ jobs:
       run: brew install libomp
       if: startsWith(runner.os, 'macOS') == true
 
-    - name: Run Nox session for brevitas pytest
-      shell: bash
-      run: nox -v -s tests_brevitas_cpu-${{ matrix.python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+&{steps}
