--- a/.github/workflows/reduced_develop_install.yml
+++ b/.github/workflows/reduced_develop_install.yml
@@ -1,11 +1,13 @@
-name: Pytest
+name: Test develop install
 
 on:
-  push:
-    branches: [ master, dev ]
   pull_request:
     types:
-      - review_requested
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+
 
 jobs:
   build:
@@ -15,10 +17,9 @@ jobs:
 
 
       matrix:
-        python_version: ['3.7', '3.8']
-        pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
-        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_disabled']
+        python_version: ['3.8']
+        pytorch_version: ['1.5.1', '1.10.1', '1.13.0']
+        platform: ['ubuntu-latest']
 
 
 
@@ -48,6 +49,10 @@ jobs:
       run: brew install libomp
       if: startsWith(runner.os, 'macOS') == true
 
-    - name: Run Nox session for brevitas pytest
+    - name: Run Nox session for testing brevitas develop install and imports
       shell: bash
-      run: nox -v -s tests_brevitas_cpu-${{ matrix.python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+      run: nox -v -s tests_brevitas_install_dev-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+    - name: Run Nox session for testing brevitas_examples develop install and imports
+      shell: bash
+      run: nox -v -s tests_brevitas_examples_install_dev-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
