--- a/.github/workflows/reduced_end_to_end.yml
+++ b/.github/workflows/reduced_end_to_end.yml
@@ -1,25 +1,30 @@
-name: Pytest
+name: Test End-to-end flows
 
 on:
-  push:
-    branches: [ master, dev ]
   pull_request:
     types:
-      - review_requested
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+
 
 jobs:
   build:
     runs-on: ${{ matrix.platform }}
     strategy:
       fail-fast: false
+      max-parallel: 4
 
 
       matrix:
-        python_version: ['3.7', '3.8']
-        pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
-        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
-        jit_status: ['jit_disabled']
+        python_version: ['3.8']
+        pytorch_version: ['1.5.1', '1.10.1', '1.13.0']
+        platform: ['ubuntu-latest']
 
+
+        exclude:
+          - platform: 'windows-latest'
 
 
 
@@ -48,6 +53,6 @@ jobs:
       run: brew install libomp
       if: startsWith(runner.os, 'macOS') == true
 
-    - name: Run Nox session for brevitas pytest
+    - name: Run Nox session for end-to-end flows
       shell: bash
-      run: nox -v -s tests_brevitas_cpu-${{ matrix.python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+      run: nox -v -s tests_brevitas_end_to_end-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
