--- a/.github/workflows/reduced_pytest.yml
+++ b/.github/workflows/reduced_pytest.yml
@@ -1,11 +1,13 @@
 name: Pytest
 
 on:
-  push:
-    branches: [ master, dev ]
   pull_request:
     types:
-      - review_requested
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
+
 
 jobs:
   build:
@@ -15,9 +17,9 @@ jobs:
 
 
       matrix:
-        python_version: ['3.7', '3.8']
-        pytorch_version: ['1.5.1', '1.6.0', '1.7.1', '1.8.1', '1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
-        platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
+        python_version: ['3.8']
+        pytorch_version: ['1.5.1', '1.10.1', '1.13.0']
+        platform: ['ubuntu-latest']
         jit_status: ['jit_disabled']
 
 
