--- a/.github/workflows/ort_integration.yml
+++ b/.github/workflows/ort_integration.yml
@@ -20,6 +20,22 @@ jobs:
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
+        exclude:
+          - pytorch_version: '1.5.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.6.0'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.7.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.8.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.9.1'
+            jit_status: 'jit_disabled'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
