--- a/.github/workflows/reduced_develop_install.yml
+++ b/.github/workflows/reduced_develop_install.yml
@@ -22,6 +22,22 @@ jobs:
         platform: ['ubuntu-latest']
 
 
+        exclude:
+          - pytorch_version: '1.5.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.6.0'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.7.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.8.1'
+            jit_status: 'jit_disabled'
+
+          - pytorch_version: '1.9.1'
+            jit_status: 'jit_disabled'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
