--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -23,19 +23,19 @@ jobs:
 
         exclude:
           - pytorch_version: '1.5.1'
-            jit_status: 'jit_disabled'
+            jit_status: 'jit_enabled'
 
           - pytorch_version: '1.6.0'
-            jit_status: 'jit_disabled'
+            jit_status: 'jit_enabled'
 
           - pytorch_version: '1.7.1'
-            jit_status: 'jit_disabled'
+            jit_status: 'jit_enabled'
 
           - pytorch_version: '1.8.1'
-            jit_status: 'jit_disabled'
+            jit_status: 'jit_enabled'
 
           - pytorch_version: '1.9.1'
-            jit_status: 'jit_disabled'
+            jit_status: 'jit_enabled'
 
 
 
