--- a/.github/workflows/reduced_examples_pytest.yml
+++ b/.github/workflows/reduced_examples_pytest.yml
@@ -20,24 +20,8 @@ jobs:
         python_version: ['3.8']
         pytorch_version: ['1.5.1', '1.10.1', '1.13.0']
         platform: ['ubuntu-latest']
-        jit_status: ['jit_disabled', 'jit_enabled']
+        jit_status: ['jit_disabled']
 
-
-        exclude:
-          - pytorch_version: '1.5.1'
-            jit_status: 'jit_enabled'
-
-          - pytorch_version: '1.6.0'
-            jit_status: 'jit_enabled'
-
-          - pytorch_version: '1.7.1'
-            jit_status: 'jit_enabled'
-
-          - pytorch_version: '1.8.1'
-            jit_status: 'jit_enabled'
-
-          - pytorch_version: '1.9.1'
-            jit_status: 'jit_enabled'
 
 
 
