CI: special comment to trigger all tests

--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     types:
       - review_requested
+  issue_comment:
+    types: [created, edited, deleted]
 
 jobs:
   build:
@@ -25,7 +27,7 @@ jobs:
 
 
 
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft & contains(github.event.comment.html_url, '/run_tests')}}
     steps:
 
     - name: Checkout repo
