--- a/.github/workflows/base.yml.template
+++ b/.github/workflows/base.yml.template
@@ -6,6 +6,8 @@ on:
   pull_request:
     types:
       - review_requested
+  issue_comment:
+    types: [created, edited, deleted]
 
 jobs:
   build:
@@ -16,7 +18,7 @@ jobs:
 &{matrix}
 &{exclude}
 
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft && contains(github.event.comment.html_url, '/run_tests')}}
     steps:
 
     - name: Checkout repo
