Examples (imagenet): add rounded QuantAvgPool variants

--- a/src/brevitas_examples/imagenet_classification/cfg/quant_mobilenet_v1_4b_round_avgpool.ini
+++ b/src/brevitas_examples/imagenet_classification/cfg/quant_mobilenet_v1_4b_round_avgpool.ini
@@ -5,7 +5,7 @@ PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_mobil
 
 [QUANT]
 BIT_WIDTH: 4
-ROUND_AVG_POOL = FALSE
+ROUND_AVG_POOL = TRUE
 
 [PREPROCESS]
 MEAN_0: 0.485
