--- a/src/brevitas_examples/imagenet_classification/cfg/quant_proxylessnas_mobile14_4b5b.ini
+++ b/src/brevitas_examples/imagenet_classification/cfg/quant_proxylessnas_mobile14_4b5b.ini
@@ -7,6 +7,7 @@ HADAMARD_CLASSIFIER: FALSE
 FIRST_LAYER_WEIGHT_BIT_WIDTH: 8
 BIT_WIDTH: 4
 DEPTHWISE_BIT_WIDTH: 5
+ROUND_AVG_POOL = FALSE
 
 [PREPROCESS]
 # 128 / 255 = 0.5019607843137255
