--- a/src/brevitas_examples/imagenet_classification/cfg/quant_proxylessnas_mobile14_4b_round_avgpool.ini
+++ b/src/brevitas_examples/imagenet_classification/cfg/quant_proxylessnas_mobile14_4b_round_avgpool.ini
@@ -1,13 +1,13 @@
 [MODEL]
 ARCH: quant_proxylessnas_mobile14
-PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_proxylessnas_mobile14_hadamard_4b-r0/quant_proxylessnas_mobile14_hadamard_4b-4acbfa9f.pth
-HADAMARD_CLASSIFIER = TRUE
+PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_proxylessnas_mobile14_4b-r0/quant_proxylessnas_mobile14_4b-e10882e1.pth
+HADAMARD_CLASSIFIER: FALSE
 
 [QUANT]
 FIRST_LAYER_WEIGHT_BIT_WIDTH: 8
 BIT_WIDTH: 4
 DEPTHWISE_BIT_WIDTH: 4
-ROUND_AVG_POOL = FALSE
+ROUND_AVG_POOL = TRUE
 
 [PREPROCESS]
 # 128 / 255 = 0.5019607843137255
