--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,11 @@ repos:
     hooks:
     -   id: isort
         name: isort (python)
+
+
+-   repo: https://github.com/pre-commit/mirrors-yapf
+    rev: v0.32.0  # Use the sha / tag you want to point at
+    hooks:
+    - id: yapf
+      args: ["-i"]
+      additional_dependencies: [toml]
