CI: exclude old torch versions for end_to_end

--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -23,6 +23,12 @@ jobs:
         exclude:
           - platform: 'windows-latest'
 
+          - pytorch_version: '1.5.1'
+
+          - pytorch_version: '1.6.0'
+
+          - pytorch_version: '1.7.1'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
