Feat: ptq benchmark

--- a/src/brevitas_examples/imagenet_classification/models/cfg/quant_mobilenet_v1_4b.ini
+++ b/src/brevitas_examples/imagenet_classification/models/cfg/quant_mobilenet_v1_4b.ini
@@ -2,10 +2,11 @@
 ARCH: quant_mobilenet_v1
 WIDTH_SCALE: 1.0
 PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/quant_mobilenet_v1_4b-r1/quant_mobilenet_v1_4b-0100a667.pth
+FLOAT_PRETRAINED_URL: https://github.com/osmr/imgclsmob/releases/download/v0.0.155/mobilenet_w1-0895-7e1d739f.pth.zip
 
 [QUANT]
 BIT_WIDTH: 4
-ROUND_AVG_POOL = TRUE
+ROUND_AVG_POOL = FALSE
 
 [PREPROCESS]
 MEAN_0: 0.485
