Fix (export/qonnx): uppercase rounding mode
Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

--- a/src/brevitas_examples/bnn_pynq/cfg/resnet18_4w4a.ini
+++ b/src/brevitas_examples/bnn_pynq/cfg/resnet18_4w4a.ini
@@ -2,6 +2,7 @@
 ARCH: RESNET18
 DATASET: CIFAR10
 NUM_CLASSES: 10
+PRETRAINED_URL: https://github.com/Xilinx/brevitas/releases/download/bnn_pynq-r2/resnet18_4w4a-a172f334.pth
 
 [QUANT]
 WEIGHT_BIT_WIDTH: 4
