Feat (fx): upgrade fx backport to 2.0.1 and update value_tracer (#618)
* Initial backport of make_fx from 2.0.1 over old fx backport

Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

* Fixes for the backport of make_fx

Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

* Fixes for fx tracing

* New API and fixes for value tracing

* Fix concrete mode execution

* Fix tracing cat and stack

* Fix fx tracer tests

* Add sympy to requirements

* Exclude backport from precommit

* Fix missing backport of torch._ops

* Fix precommit exclusion

* Fix for _ops backport

* New attempt at OpOverload backport

* Fix linter

* Fix torch profiler imports

* proxy_tensor import guards

* fix map aggregate import

* More fixes

* Handle missing complex32 in 1.11

* Fix value tracing on windows

---------

Signed-off-by: Alessandro Pappalardo <alessand@xilinx.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ default_language_version:
 
 default_stages: [commit]
 
-exclude: 'docs'
+exclude: '(src/brevitas/backport|docs)'
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
