--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -42,6 +42,11 @@ jobs:
       shell: bash
       run: pip install -r requirements/requirements-nox.txt
 
+    - name: Install update
+      shell: bash
+      run: sudo apt-get update
+      if: startsWith(runner.os, 'Linux') == true
+
     - name: Install libsndfile and libgomp1 on Ubuntu
       shell: bash
       run: sudo apt-get install -y libsndfile-dev libgomp1
