--- a/.github/workflows/develop_install.yml
+++ b/.github/workflows/develop_install.yml
@@ -16,7 +16,7 @@ jobs:
 
       matrix:
         python_version: ['3.8', '3.9']
-        pytorch_version: ['1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0']
+        pytorch_version: ['1.9.1', '1.10.1', '1.11.0', '1.12.1', '1.13.0', '2.0.1', '2.1.0']
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
