--- a/requirements/requirements-docs.txt
+++ b/requirements/requirements-docs.txt
@@ -1,7 +1,7 @@
 m2r2
 nbsphinx
 nbsphinx-link
-pydata-sphinx-theme
+pydata-sphinx-theme==0.14.3
 sphinx==5.3.0
 sphinx-autodoc-typehints
 sphinx-gallery==0.10.1
