simplified skeleton for testing

--- a/.github/workflows/full_test_suite.yml
+++ b/.github/workflows/full_test_suite.yml
@@ -1,8 +1,6 @@
 name: Full Test Suite
 
 on:
-    push:
-        branches: [master, dev]
     issue_comment:
         types: [created]
 
@@ -11,6 +9,6 @@ jobs:
         runs-on: ubuntu-latest
 
         # always run on push event but for comment events, only run for pull request comments with the specific expected message
-        if: (github.event.issue.pull_request != '' && contains(github.event.comment.body,'/test')) || (github.event_name == 'push')
+        if: (github.event.issue.pull_request != '')
         steps:
             - run: echo Hello, world!
