--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -3,9 +3,8 @@ name: Test End-to-end flows
 on:
   push:
     branches: [ master, dev ]
-  pull_request:
-    types:
-      - review_requested
+  issue_comment:
+    types: [created]
 
 jobs:
   build:
@@ -24,8 +23,7 @@ jobs:
           - platform: 'windows-latest'
 
 
-
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft && (github.event_name != "issue_comment" || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
