--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,9 +3,8 @@ name: Pytest
 on:
   push:
     branches: [ master, dev ]
-  pull_request:
-    types:
-      - review_requested
+  issue_comment:
+    types: [created]
 
 jobs:
   build:
@@ -26,8 +25,7 @@ jobs:
             jit_status: 'jit_enabled'
 
 
-
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft && (github.event_name != "issue_comment" || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
