--- a/.github/workflows/reduced_end_to_end.yml
+++ b/.github/workflows/reduced_end_to_end.yml
@@ -6,7 +6,8 @@ on:
       - opened
       - reopened
       - synchronize
-      - ready_for_review
+  issue_comment:
+    types: [created]
 
 
 jobs:
@@ -26,8 +27,7 @@ jobs:
           - platform: 'windows-latest'
 
 
-
-    if: ${{ !github.event.pull_request.draft }}
+    if: ${{ !github.event.pull_request.draft && (github.event_name != "issue_comment" || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
