--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -23,7 +23,7 @@ jobs:
           - platform: 'windows-latest'
 
 
-    if: ${{ !github.event.pull_request.draft && (github.event_name != "issue_comment" || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
+    if: ${{ !github.event.pull_request.draft && (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
