--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
             jit_status: 'jit_enabled'
 
 
-    if: ${{ !github.event.pull_request.draft && (github.event_name != "issue_comment" || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
+    if: ${{ !github.event.pull_request.draft && (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
