updated template so automatic generation of workflows works correctly

--- a/.github/workflows/develop_install.yml
+++ b/.github/workflows/develop_install.yml
@@ -21,7 +21,7 @@ jobs:
 
 
 
-    if: ${{ !github.event.pull_request.draft && (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
+    if: ${{ !github.event.pull_request.draft & (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' & contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
@@ -58,3 +58,5 @@ jobs:
     - name: Run Nox session for testing brevitas_examples develop install and imports
       shell: bash
       run: nox -v -s tests_brevitas_examples_install_dev-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+
