--- a/.github/workflows/ort_integration.yml
+++ b/.github/workflows/ort_integration.yml
@@ -20,7 +20,8 @@ jobs:
 
 
 
-    if: ${{ !github.event.pull_request.draft && (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
+
+    if: ${{ !github.event.pull_request.draft & (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' & contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
@@ -53,3 +54,5 @@ jobs:
     - name: Run Nox session for Brevitas-ORT integration
       shell: bash
       run: nox -v -s tests_brevitas_ort_integration-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+
