--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -23,7 +23,8 @@ jobs:
           - platform: 'windows-latest'
 
 
-    if: ${{ !github.event.pull_request.draft && (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' && contains(github.event.comment.body, '/run-tests')))}}
+
+    if: ${{ !github.event.pull_request.draft & (github.event_name != 'issue_comment' || (github.event.issue.pull_request != '' & contains(github.event.comment.body, '/run-tests')))}}
     steps:
 
     - name: Checkout repo
@@ -56,3 +57,5 @@ jobs:
     - name: Run Nox session for end-to-end flows
       shell: bash
       run: nox -v -s tests_brevitas_end_to_end-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+
