--- a/.github/workflows/reduced_examples_pytest.yml
+++ b/.github/workflows/reduced_examples_pytest.yml
@@ -6,6 +6,7 @@ on:
       - opened
       - reopened
       - synchronize
+      - ready_for_review
 
 
 jobs:
@@ -57,3 +58,5 @@ jobs:
     - name: Run Nox session for brevitas_examples pytest
       shell: bash
       run: nox -v -s tests_brevitas_examples_cpu-${{ matrix.python_version }}\(${{ matrix.jit_status }}\,\ pytorch_${{ matrix.pytorch_version }}\)
+
+
