--- a/.github/workflows/reduced_ort_integration.yml
+++ b/.github/workflows/reduced_ort_integration.yml
@@ -6,6 +6,7 @@ on:
       - opened
       - reopened
       - synchronize
+      - ready_for_review
 
 
 jobs:
@@ -56,3 +57,5 @@ jobs:
     - name: Run Nox session for Brevitas-ORT integration
       shell: bash
       run: nox -v -s tests_brevitas_ort_integration-${{ matrix.python_version }}\(\pytorch_${{ matrix.pytorch_version }}\)
+
+
