Fix (tests/actions): Regenerated github actions YAML files.

--- a/.github/workflows/examples_pytest.yml
+++ b/.github/workflows/examples_pytest.yml
@@ -22,6 +22,10 @@ jobs:
 
 
         exclude:
+          - python_version: '3.8'
+            pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
           - pytorch_version: '1.9.1'
             jit_status: 'jit_enabled'
 
