--- a/.github/workflows/finn_integration.yml
+++ b/.github/workflows/finn_integration.yml
@@ -20,6 +20,11 @@ jobs:
         platform: ['windows-latest', 'ubuntu-latest']
 
 
+        exclude:
+          - python_version: '3.8'
+            pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
