--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -21,8 +21,7 @@ jobs:
 
 
         exclude:
-          - python_version: '3.8'
-            pytorch_version: '1.9.1'
+          - pytorch_version: '1.9.1'
             platform: 'macos-latest'
 
           - platform: 'windows-latest'
