Fix (tests/actions): regenerated github actions files.

--- a/.github/workflows/reduced_examples_pytest.yml
+++ b/.github/workflows/reduced_examples_pytest.yml
@@ -24,6 +24,9 @@ jobs:
 
 
         exclude:
+          - pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
