--- a/.github/workflows/reduced_finn_integration.yml
+++ b/.github/workflows/reduced_finn_integration.yml
@@ -23,6 +23,9 @@ jobs:
 
 
         exclude:
+          - pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
           - python_version: '3.10'
             pytorch_version: '1.9.1'
 
