Fix (test/actions): Excluded `torch==1.9.1`, `platform=macos-latest` tests (#960)
* Fix (test/actions): Excluded python=3.8, torch==1.9.1, platform=macos-latest tests.

* Fix (tests/actions): Regenerated github actions YAML files.

* Fix (tests/actions): Disabled all MaxOSX, `torch==1.9.1` tests

* Fix (tests/actions): Regenerated github actions files.

--- a/.github/workflows/develop_install.yml
+++ b/.github/workflows/develop_install.yml
@@ -20,6 +20,10 @@ jobs:
         platform: ['windows-latest', 'ubuntu-latest', 'macos-latest']
 
 
+        exclude:
+          - pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
 
 
     if: ${{ !github.event.pull_request.draft }}
