--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -21,6 +21,9 @@ jobs:
 
 
         exclude:
+          - pytorch_version: '1.9.1'
+            platform: 'macos-latest'
+
           - platform: 'windows-latest'
 
 
